# Smartphone-Feature-Impact-Analysis-Score-Prediction

./: .dockerignore  .gitignore  LICENSE  README.md  api.Dockerfile  frontend.Dockerfile  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: deploy.yaml  deploy.yml
api/: main.py  schemas.py
api/repository/: data.json  home.py  ratings.py  utils.py
api/routers/: home.py  ratings.py
artifacts/: test_x.csv  test_y.csv  train.csv
data/export/: internal_memory_outliers.csv  mv_extended_upto.csv  mv_fast_charging.csv  mv_processor_speed.csv
data/interim/: smartphone_cleaned_v1.csv
data/processed/: smartphone_cleaned_v2.csv
docs/: .gitignore  Project_Summary_Documentation.md  Technical_Details.md
docs/assets/: render_dockerfile.txt
frontend/: Home.py  config.py  pyproject.toml  requirements.txt  setup.py
frontend/pages/: Ratings.py
frontend/pages_content/: interpret.py  metrics.py  predict_rating.py  rating_predictor_desc.py
ml/constants/: constants.py
ml/entity/: config_entity.py  estimator.py  load_objects.py  transform.py
ml/exception/: exception.py
ml/logger/: logger.py
ml/pipeline/: prediction_pipeline.py
ml/utils/: main_utils.py  utils.py
notebooks/clean/: 1_data_cleaning.ipynb  2_data_cleaning.ipynb
notebooks/model/: 0_smartphone_overview_eda.ipynb  2_feature_engineering.ipynb  3_model_baseline.ipynb  5_model_training.ipynb
references/: model_selection.md
scrape/: requirements.txt
src/utils/: utils.py
