[project]
name = "ml"
version = "0.0.1"
description = "API for predicting and interpreting smartphone specification ratings."
authors = [{name = "Pramit De", email = "pramitde726@gmail.com"}]

[tool.setuptools]
packages = {find = {include = ["ml"]}} 

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"